routerlicious/kubernetes/agents/minio-ingress-ppe.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: minio-ppe
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx-ppe"
   ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - "minio.wu2-ppe.prague.office-int.com"
   secretName: wu2-ppe-tls-certificate
 rules:
 - host: "minio.wu2-ppe.prague.office-int.com"
   http:
     paths:
     - path: /
       backend:
         serviceName: agents-storage-ppe-minio-svc
         servicePort: 9000
